--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -43,7 +43,7 @@
   --#{$table}--cell--PaddingInlineStart: var(--#{$table}--cell--Padding--base);
   --#{$table}--cell--FontSize: var(--pf-t--global--font--size--body--default);
   --#{$table}--cell--FontWeight: var(--pf-t--global--font--weight--body--default);
-  --#{$table}--cell--LineHeight: var(--pf-t--global--font--line-height--body);
+  --#{$table}--cell--LineHeight: var(--#{$table}--LineHeight);
   --#{$table}--cell--Color: var(--pf-t--global--text--color--regular);
   --#{$table}--cell--first-last-child--PaddingInline: var(--pf-t--global--spacer--inset--page-chrome);
   --#{$table}__tr--m-first-cell-offset-reset--cell--PaddingInlineStart: var(--#{$table}--cell--Padding--base);
@@ -1014,6 +1014,8 @@
 .#{$table}.pf-m-compact {
   --#{$table}--cell--PaddingBlockStart: var(--#{$table}--m-compact--cell--PaddingBlockStart);
   --#{$table}--cell--PaddingBlockEnd: var(--#{$table}--m-compact--cell--PaddingBlockEnd);
+  --#{$table}__button--PaddingBlockStart: var(--#{$table}--m-compact__action--PaddingBlockStart);
+  --#{$table}__button--PaddingBlockEnd: var(--#{$table}--m-compact__action--PaddingBlockEnd);
 
   // - Table compact table tr
   tr:where(.#{$table}__tr) {
@@ -1034,8 +1036,9 @@
 
   .#{$table}__action,
   .#{$table}__favorite,
-  .#{$table}__toggle,
+  .#{$table}__inline-edit-action,
   .#{$table}__draggable,
+  .#{$table}__toggle,
   .#{$table}__sort {
     --#{$table}--cell--PaddingBlockStart: var(--#{$table}--m-compact__action--PaddingBlockStart);
     --#{$table}--cell--PaddingBlockEnd: var(--#{$table}--m-compact__action--PaddingBlockEnd);
