--- a/src/patternfly/components/Nav/nav.scss
+++ b/src/patternfly/components/Nav/nav.scss
@@ -39,7 +39,6 @@
 
   // * Nav item
   --#{$nav}__item--RowGap: var(--#{$nav}__list--RowGap);
-  --#{$nav}__item--m-expanded--TransitionDuration--row-gap: 0;
 
   // * Nav item toggle icon
   --#{$nav}__item__toggle-icon--Rotate: 0;
@@ -76,15 +75,13 @@
   --#{$nav}__subnav--PaddingBlockStart: var(--#{$nav}__item--RowGap); // needed to keep focus outline on first item from being cut off
   --#{$nav}__subnav--PaddingBlockEnd: var(--#{$nav}__item--RowGap); // needed to keep focus outline on last item from being cut off
   --#{$nav}__subnav--PaddingInlineStart: var(--pf-t--global--spacer--md);
-  --#{$nav}__subnav--TransitionDuration--grid-template-rows: 0s; // no slide by default
-  --#{$nav}__subnav--TransitionDuration--opacity: var(--pf-t--global--motion--duration--slide-in--default); // match the duration of the slide open
-  --#{$nav}__subnav--hidden--TransitionDuration--opacity: var(--pf-t--global--motion--duration--slide-in--short);
-  --#{$nav}__subnav--TransitionTimingFunction--grid-template-rows: var(--pf-t--global--motion--timing-function--default);
-  --#{$nav}__subnav--TransitionTimingFunction--opacity: var(--pf-t--global--motion--timing-function--default);
+  --#{$nav}__subnav--TransitionDuration--expansion: 0s; // no slide by default
+  --#{$nav}__subnav--hidden--TransitionDuration--expansion: 0;
+  --#{$nav}__subnav--TransitionTimingFunction--expansion: var(--pf-t--global--motion--timing-function--default);
 
   @media (prefers-reduced-motion: no-preference) {
-    --#{$nav}__subnav--TransitionDuration--grid-template-rows: var(--pf-t--global--motion--duration--slide-in--default);
-    --#{$nav}__subnav--hidden--TransitionDuration--grid-template-rows: var(--pf-t--global--motion--duration--slide-in--short);
+    --#{$nav}__subnav--TransitionDuration--expansion: var(--pf-t--global--motion--duration--slide-in--default);
+    --#{$nav}__subnav--hidden--TransitionDuration--expansion: var(--pf-t--global--motion--duration--slide-in--short);
   }
 
   // * Nav scroll button
@@ -215,15 +212,14 @@
   padding-block-end: var(--#{$nav}__subnav--PaddingBlockEnd);
   padding-inline-start: var(--#{$nav}__subnav--PaddingInlineStart); // indent nested lists
   overflow-y: clip;
-  transition-timing-function: var(--#{$nav}__subnav--TransitionTimingFunction--grid-template-rows), var(--#{$nav}__subnav--TransitionTimingFunction--grid-template-rows), var(--#{$nav}__subnav--TransitionTimingFunction--grid-template-rows), var(--#{$nav}__subnav--TransitionTimingFunction--opacity);
-  transition-duration: var(--#{$nav}__subnav--TransitionDuration--grid-template-rows), var(--#{$nav}__subnav--TransitionDuration--grid-template-rows), var(--#{$nav}__subnav--TransitionDuration--grid-template-rows), var(--#{$nav}__subnav--TransitionDuration--opacity);
+  transition-timing-function: var(--#{$nav}__subnav--TransitionTimingFunction--expansion);
+  transition-duration: var(--#{$nav}__subnav--TransitionDuration--expansion);
   transition-property: grid-template-rows, padding-block-start, padding-block-end, opacity;
   
   &[hidden] {
-    --#{$nav}__subnav--TransitionDuration--grid-template-rows: var(--#{$nav}__subnav--hidden--TransitionDuration--grid-template-rows);
+    --#{$nav}__subnav--TransitionDuration--expansion: var(--#{$nav}__subnav--hidden--TransitionDuration--expansion);
     --#{$nav}__subnav--PaddingBlockStart: 0;
     --#{$nav}__subnav--PaddingBlockEnd: 0;
-    --#{$nav}__subnav--TransitionDuration--opacity: var(--#{$nav}__subnav--hidden--TransitionDuration--opacity);
 
     grid-template-rows: 0fr;
     opacity: 0;
@@ -242,11 +238,6 @@
     > .#{$nav}__subnav {
       margin-block-end: calc(var(--#{$nav}__subnav--PaddingBlockEnd) * -1); // offset bottom padding
     }
-  }
-
-  &.pf-m-expanded { 
-    // duration for collapsing needs to set the property rather than the variable because of nested items
-    transition-duration: var(--#{$nav}__item--m-expanded--TransitionDuration--row-gap);
   }
 }
 
