feat(Button): add favorite button modifier

--- a/src/patternfly/components/Button/button.hbs
+++ b/src/patternfly/components/Button/button.hbs
@@ -21,6 +21,8 @@
     button--IsRead='pf-m-read'
     button--IsUnread='pf-m-unread'
     button--IsAttention='pf-m-attention'
+    button--IsFavorite='pf-m-favorite'
+    button--IsFavorited='pf-m-favorited'
     button--IsDisplayLg='pf-m-display-lg'
     button--IsBlock='pf-m-block'
     button--modifier=button--modifier
