feat(Button): use new favorite buttons in tables

--- a/src/patternfly/components/Table/table-favorite-button.hbs
+++ b/src/patternfly/components/Table/table-favorite-button.hbs
@@ -2,5 +2,7 @@
   button--IsPlain=true
   button--icon="star"
   button--IsIcon=true
+  button--IsFavorite=true
+  button--IsFavorited=table-td--IsFavorited
   button--aria-label=(ternary table-td--IsFavorited "Starred" "Not starred")
   button--attribute=(concat 'id="' table--id '-favorite-button' table-tr--index '" aria-labelledby="' table--id '-node' table-tr--index ' ' table--id '-favorite-button' table-tr--index '"')}}
