--- a/src/patternfly/components/Table/table-favorite-sort.hbs
+++ b/src/patternfly/components/Table/table-favorite-sort.hbs
@@ -1,6 +1,6 @@
 {{#> action-list action-list--modifier='pf-m-icons'}}
   {{#> action-list-item}}
-    {{> button button--IsPlain=true button--IsIcon=true button--icon="star" button--aria-label='Favorite all'}}
+    {{> button button--IsPlain=true button--IsIcon=true button--IsFavorite=true button--icon="star" button--aria-label='Favorite all'}}
   {{/action-list-item}}
   {{#> action-list-item}}
     {{> button button--IsPlain=true button--IsIcon=true button--icon-template="table-sort-indicator" button--aria-label='Sort favorites'}}
